# Physical-AI-And-Humanoid-Robotics-TextBook

./: .env  AUTHENTICATION.md  CHATBOT_BUILD_SUMMARY.md  CHATBOT_DEPLOYMENT.md  CHATBOT_QUICK_REFERENCE.md  CHATBOT_README.md  CHATBOT_SETUP.md  CONSTITUTION-SETUP-SUMMARY.md  DOCUMENTATION_INDEX.md  README.md  SIGNIN_DEBUG_GUIDE.md  SIGNIN_QUICK_START.md  SIGN_IN_GUIDE.md  SIGN_IN_VERIFICATION.md  TRANSLATION_FEATURE.md  TRANSLATION_FIX_SUMMARY.md  auth.ts  package-lock.json
.gemini/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
api/auth/: [...auth].js  get-session.js  google.js  logout.js  me.js  sign-out.js
backend/: .gitignore  Dockerfile  agent.py  chatbot_api.py  main.py  rag_chatbot.py  requirements.txt  retrieving.py  verification.py
backend/app/: __init__.py  db.py  main.py  rag.py
backend/scripts/: index_content.py
backend/tests/: __init__.py  test_rag.py
physical-ai-book/: .env  .env.example  .gitignore  ALGOLIA_DOCSEARCH_SETUP.md  CUSTOM_SEARCH_GUIDE.md  DEPLOYMENT_GUIDE.md  PROJECT_COMPLETION.md  QUICK_REFERENCE.md  SEARCH_COMPLETE.md  SEARCH_FIX_COMPLETE.md  UI_CUSTOMIZATION_SUMMARY.md  docusaurus.config.ts  package-lock.json  package.json  vercel.json
physical-ai-book/docs/: 00-introduction.md  01-module-ros2.md  02-module-gazebo-unity.md  03-module-isaac.md  04-module-vla.md  05-capstone.md
simulation/: README.md
simulation/ros2_ws/src/robot_description/: package.xml
simulation/ros2_ws/src/robot_description/launch/: sim_launch.py
(+88 files in other folders)
